# MyCNote

./: .gitignore  C.code-workspace  CMakeLists.txt  Doxyfile  Readme.md
case/: main.h
case/case_bmi_calc/: bmi_calc.c
case/case_cJson_test/: CMakeLists.txt  case_cJson_test.c
case/case_error_report_test/: CMakeLists.txt  case_error_report_test.c
case/case_fdk_aac_test/: aac_test.c  aac_test.h
case/case_hello_world/: CMakeLists.txt  hello_world.c
case/case_sort/: CMakeLists.txt  case_bubble_sort.c  case_insertion_sort.c  case_merge_sort.c
case/case_uthash_test/: case_uthash_test.c
config/: aac.json
lib/libsort/: CMakeLists.txt
lib/libsort/libbubble_sort/: PseudoCode_BubbleSort.md  bubble_sort.c  bubble_sort.h
lib/libsort/libinsertion_sort/: PseudoCode_InsertionSort.md  insertion_sort.c  insertion_sort.h
lib/libsort/libmerge_sort/: PseudoCode_MergeSort.md  merge_sort.c  merge_sort.h
lib/libsort/quick_sort/: PseudoCode_QuickSort.md
lib/libstatusreport/: CMakeLists.txt  status_report.c  status_report.h
note/: C_basic.md  CodeComplete2Notebook.md  PCHornerFormula.md  PCInversion.md  PseudoCodeLogic.md  PseudoCodeProtocol.md  TheFoundationsOfTCPIP.md  skills.md  tips.md
opensource/libcjson/: CMakeLists.txt
